--- a/cfg/Teraranger_hub_multiflex.cfg
+++ b/cfg/Teraranger_hub_multiflex.cfg
@@ -6,10 +6,19 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 mode_enum = gen.enum([ gen.const("Precise", int_t, 0, "Precise"),
-		       gen.const("Fast",      int_t, 1, "Fast"),
-                       gen.const("LongRange", int_t, 2, "LongRange")],
-                     "Set the working mode")
+			gen.const("Fast",      int_t, 1, "Fast"),
+        	gen.const("LongRange", int_t, 2, "LongRange")],
+					  "Set the working mode")
+
 
 gen.add("Mode", int_t, 0, "Set the mode", 0, 0, 2, edit_method=mode_enum)
+gen.add("Sensor_0", bool_t, 1, "Activate sensor", True)
+gen.add("Sensor_1", bool_t, 2, "Activate sensor", True)
+gen.add("Sensor_2", bool_t, 3, "Activate sensor", True)
+gen.add("Sensor_3", bool_t, 4, "Activate sensor", True)
+gen.add("Sensor_4", bool_t, 5, "Activate sensor", True)
+gen.add("Sensor_5", bool_t, 6, "Activate sensor", True)
+gen.add("Sensor_6", bool_t, 7, "Activate sensor", True)
+gen.add("Sensor_7", bool_t, 8, "Activate sensor", True)
 
 exit(gen.generate(PACKAGE, "teraranger_hub_multiflex", "Teraranger_hub_multiflex"))
